# game-believer-crawler

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: settings.yaml
docs/: DATA-SOURCES.md  DEVELOPMENT-PLAN.md  IMAGE-STORAGE.md
scripts/: gamebeliever-crawler.service  gamebeliever-crawler.timer  install-cron.sh  schedule.py
src/: __init__.py  config.py  main.py
src/crawler/: __init__.py  base.py  game8.py  prydwen.py
src/models/: __init__.py  character.py  lightcone.py  material.py  relic.py
src/parser/: __init__.py  character.py  lightcone.py  material.py  relic.py
src/pipeline/: __init__.py  clean.py  export.py  sync.py  updater.py  validate.py
src/utils/: __init__.py  browser.py  cache.py  http.py  logger.py
